Clean-up code associated to Plug-in Dependency Analysis